--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
     <title>Odin Calculator</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>ODIN CALCULATOR</h1>
+    <main>
+        <section>
+            <div class="calc-display"><p>0</p></div>
+            <div class="operations">
+                <button id="add" value="+">+</button>
+                <button id="substract" value="-">-</button>
+                <button id="multiply" value="*">*</button>
+                <button id="divide" value="/">/</button>
+            </div>
+            <div class="digits">
+                <button id="0" value="0">0</button>
+                <button id="1" value="1">1</button>
+                <button id="2" value="2">2</button>
+                <button id="3" value="3">3</button>
+                <button id="4" value="4">4</button>
+                <button id="5" value="5">5</button>
+                <button id="6" value="6">6</button>
+                <button id="7" value="7">7</button>
+                <button id="8" value="8">8</button>
+                <button id="9" value="9">9</button>
+            </div>
+            <div class="confirm-clear">
+                <button id="result-button" value="result">=</button>
+                <button id="clear-button" value="clear">reset</button>
+                <button id="decimal" value="decimal">.</button>
+                <button id="backspace" value="backspace">←</button>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
